gcc/testsuite/rust/rustc/ui/error-codes/E0260.rs
extern crate alloc;

mod alloc {
// { dg-error ".E0260." "" { target *-*-* } .-1 }
    pub trait MyTrait {
        fn do_something();
    }
}

fn main() {}

